--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.purchasing": "4.12.2",
     "com.unity.recorder": "5.1.1",
     "com.unity.render-pipelines.core": "17.0.3",
